force-app/main/default/objects/Guide_Allocation__c/Guide_Allocation__c.object-meta.xml
<CustomObject>
    <label>Guide Allocation</label>
    <nameField>
        <displayFormat>Ref-No {0000}</displayFormat>
        <label>Ref-No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guide Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>