force-app/main/default/objects/Guide_Allocation__c/fields/Flight_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Flight_Allowance__c</fullName>
    <label>Flight Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>