force-app/main/default/objects/Guide_Allocation__c/fields/Guide__c.field-meta.xml
<CustomField>
    <fullName>Guide__c</fullName>
    <label>Guide</label>
    <referenceTo>Guide__c</referenceTo>
    <relationshipLabel>Guide Allocation</relationshipLabel>
    <relationshipName>Guide_Allocation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>